# API_SERVER/routes/api.php
@@ -4,10 +4,10 @@ use App\Http\Controllers\Api\ArmasController;
 use Illuminate\Support\Facades\Route;
 use Symfony\Component\Yaml\Yaml;
 
-Route::get('/api', function(){
+Route::get('/', function(){
     $archive = file_get_contents('../../openapi.yml');
     $data = Yaml::parse($archive);
     return response()->json($data);
 });
 
-Route::apiResource('/api/armas', ArmasController::class);
+Route::apiResource('/armas', ArmasController::class);
